@@ -1,7 +1,8 @@
 
 0.6.0 -
 
-  * added daemon and pid-file
+  * added --no-daemon and --pid-file
+  * added --no-proxy to disable the proxy 
   * fixed decoding of len-encoded ints for 3-byte notation
   * fixed check for glib2 to require at least 2.6.0
 
